# hdx-analysis-scripts

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  downloads.py  get_datasets_info.py  get_org_stats.py  hatch.toml  mixpanel_downloads.py  pyproject.toml  requirements-test.txt  requirements.txt  test-requirements.txt
.github/workflows/: run-python-script-datasetsinfo.yml  run-python-script-orgstats.yml  run-python-tests.yml
common/: __init__.py  compare.py  dataset_statistics.py  downloads.py
config/: project_configuration.yaml  project_configuration.yml
datasets_info/: non_script_updates.csv
org_stats/: org_stats.csv  total_stats.csv
src/hdx/analysis_scripts/common/: downloads.py  (+1 more)
tests/: conftest.py  test_get_datasets_info.py  test_get_org_stats.py
tests/fixtures/: non_script_updates.csv  org_stats.csv  total_stats.csv
tests/fixtures/input/: datasets_1.json  datasets_10.json  datasets_11.json  datasets_12.json  datasets_2.json  datasets_27.json  datasets_28.json  geospatiality.json  hdxconnect.json  locations.json  mixpanel_2018-06-02-2023-06-02.json  mixpanel_2019-07-02-2024-07-02.json  mixpanel_2019-07-14-2024-07-14.json  mixpanel_2019-07-15-2024-07-15.json  mixpanel_2019-07-25-2024-07-25.json  mixpanel_2020-07-20-2025-07-20.json  mixpanel_2020-11-02-2025-11-02.json  mixpanel_2020-11-16-2025-11-16.json  mixpanel_2022-06-02-2023-06-02.json  mixpanel_2023-07-02-2024-07-02.json  mixpanel_2023-07-03-2024-07-03.json  mixpanel_2023-07-15-2024-07-15.json  mixpanel_2023-07-25-2024-07-25.json  mixpanel_2024-04-15-2024-07-15.json  mixpanel_2024-04-25-2024-07-25.json  mixpanel_2024-07-20-2025-07-20.json  mixpanel_2024-11-16-2025-11-16.json  mixpanel_2025-04-20-2025-07-20.json  mixpanel_2025-08-16-2025-11-16.json  org_types.json  organisations.json  package_links.json
(+3 files in other folders)
